fixed about section alignment

--- a/src/components/about/styles.module.scss
+++ b/src/components/about/styles.module.scss
@@ -8,6 +8,7 @@
     padding: 20px 10%;
 
     @include respond-below(sm){
+        margin-left: -20px;
         padding: 20px 5%;
     }
     
